  * Avoid info database corruption and bogus accesses on unknown format
    values, by always reading the format file and validating it.
  * Clarify that the most probable reason for multiarch database
    inconcistencies is due to upgrades from unofficial dpkg versions.
  * Only satisfy a dependency on a “Multi-Arch: foreign” if arch-unqualified.

  [ Updated programs translations ]
  * Czech (Miroslav Kure).
  * Portuguese (Miguel Figueiredo). Closes: #682582
  * Russian (Yuri Kozlov). Closes: #688050
  * Traditional Chinese (imacat). Closes: #687002
  * Japanese (Kenshi Muto).

  [ Updated scripts translations ]
  * Polish (Michał Kułach). Closes: #683104
  * Spanish (Omar Campagne). Closes: #685297

  [ Updated dselect translations ]
  * Basque (Iñaki Larrañaga Murgoitio). Closes: #686421
  * Czech (Miroslav Kure).
  * Danish (Joe Dalton). Closes: #689820
  * Polish (Michał Kułach).

  [ Updated man page translations ]
  * French (Thomas Vincent, Sylvestre Ledru). Closes: #682978, #683221
  * Japanese (Hideki Yamane). Closes: #685103
  * Polish (Michał Kułach).

 -- Guillem Jover <guillem@debian.org>  Sat, 21 Jul 2012 02:56:48 +0200

dpkg (1.16.8) unstable; urgency=low

  [ Updated programs translations ]
  * Esperanto (Felipe Castro).
  * French (Christian Perrier).
  * Polish (Michał Kułach). Closes: #680561
  * Russian (Yuri Kozlov). Closes: #677850, #680411
  * Slovak (Ivan Masár).
  * Spanish (Javier Fernández-Sanguino)

  [ Updated man page translations ]
  * French (Christian Perrier).

  [ Updated scripts translations ]
  * French (Christian Perrier).
  * Russian (Yuri Kozlov).

  [ Updated dselect translations ]
  * Danish (Joe Dalton). Closes: #680108
  * Russian (Yuri Kozlov).
  * Traditional Chinese (Asho Yeh - 阿信).

 -- Guillem Jover <guillem@debian.org>  Sat, 21 Jul 2012 02:11:04 +0200

dpkg (1.16.7) unstable; urgency=low

  [ Guillem Jover ]
  * Fix bogus dpkg-query --control-show badusage() strings.

  [ Raphaël Hertzog ]