@@ -47,6 +47,8 @@ dpkg (1.16.9) UNRELEASED; urgency=low
   * Clarify that the most probable reason for multiarch database
     inconcistencies is due to upgrades from unofficial dpkg versions.
   * Only satisfy a dependency on a “Multi-Arch: foreign” if arch-unqualified.
+  * Take architecture into account in virtual packages on remove and
+    configure dpkg actions. Closes: #683411
 
   [ Updated programs translations ]
   * Czech (Miroslav Kure).
